extend nextauth types, ts type best practice, remove variablr with type any

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,12 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "src/components/web/header/main.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "src/components/web/header/main.tsx",
+    "src/types/**/*.ts"
+  ],
   "exclude": ["node_modules"]
 }
