lint, prettier, custom npn run lint

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,11 @@
 {
-  "plugins": ["@typescript-eslint"],
+  "parser" : "@typescript-eslint/parser",
+  "parserOptions": {
+    "project": "tsconfig.json"
+  },
   "extends": [
     "next/core-web-vitals",
+    "plugin:prettier/recommended",
     "plugin:@typescript-eslint/recommended"
   ],
   "rules": {
