--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=39eec7438f0a23819d48be038a791f99
+NEXTAUTH_SECRET=<some-key>
 
 # Google key
 # must same key defined in backend .env
-GOOGLE_CLIENT_ID=718226015589-ct5gio7783cgs1eovg0m98m2qchku9q9.apps.googleusercontent.com
-GOOGLE_SECRET=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
+GOOGLE_CLIENT_ID=<your-google-clientid>
+GOOGLE_SECRET=<your-google-secret>
 
 # Backend API base url
 # NestJs API url
